setup loggin endpoint
